Changelog
=========

1.1.3 (unreleased)
------------------

- Nothing changed yet.


1.1.2 (2013-10-21)
------------------

- Nothing changed yet.


1.1.1 (2013-01-21)
------------------

- Change behaviour of initialize tooltips on ajax calls.

- onegov.ch approved: add badge to readme.
  [jone]


1.1 (2012-11-28)
----------------

- Add translations.
  [jone]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Added functionality wich allows using html tags as tooltip data.
  [phgross]


1.0.5 (2012-10-16)
------------------

- Wrapped <![CDATA[ around inline javascript (W3C).
  [Julian Infanger]

- Fixed wrong ending of a page template file.
  [Julian Infanger]


1.0.4 (2012-06-14)
------------------

- Escape tooltips. HTML should not be rendered but displayed.
  This prevents JS injection.
  [jone]


1.0.3 (2012-05-09)
------------------

- Use new test buildout config.
  [mathias.leimgruber]

- Code cleanup (pep8/pylint)
  [mathias.leimgruber]


1.0.2 (2012-04-23)
------------------

- Set delay to 0 by default.
  [mathias.leimgruber]

- Trigger mousover event to activate the tooltip, otherwise
  some tooltip configurations will not work (ex. predelay)
  [mathias.leimgruber]


1.0.1 (2012-03-26)
------------------

- Hide default tooltip from browser.
  [mathias.leimgruber]


1.0 (2012-03-19)
----------------

- Init release
  [mathias.leimgruber]