@@ -8,6 +8,7 @@
     <i18n:registerTranslations directory="locales" />
 
     <include package=".browser" />
+    <include package=".upgrades" />
 
     <genericsetup:registerProfile
         name="default"
