@@ -1,0 +1,18 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
+    i18n_domain="ftw.tooltip">
+
+    <include package="ftw.upgrade" file="meta.zcml" />
+
+    <!-- 1 -> 1131-->
+    <upgrade-step:importProfile
+        title="Activate dynamic tooltips"
+        profile="ftw.tooltip:default"
+        source="1.0"
+        destination="1131"
+        directory="profiles/1131"
+        />
+
+</configure>
