@@ -1,7 +1,4 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
-    <javascript cacheable="False" compression="safe" cookable="False" expression=""
-                enabled="True" id="@@dynamic_tooltips.js" inline="True"
-                />
     <javascript enabled="True" id="++resource++plone.app.jquerytools.plugins.js" />
 </object>
